# Quantum-ThermoLedger

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
contracts/: Cargo.toml
contracts/src/: lib.rs  quantum_validator.rs  thermo_state_tracker.rs  types.rs
docs/: API.md  DEPLOYMENT.md
simulations/: quantum_simulation.py  requirements.txt  run_simulations.py  thermodynamic_simulation.py
src/: App.tsx  index.css
src/components/layout/: Footer.tsx  Navbar.tsx
src/pages/: ContractsPage.tsx  DashboardPage.tsx  DocumentationPage.tsx  HomePage.tsx  SimulationsPage.tsx
